A1/tests/test.c.mytoks
	Token Name: INTEGER 	Token: int 	 Lineno: 1
	Token Name: NAME 	Token: a 	 Lineno: 1
	Token Name: META CHAR 	Token: , 	 Lineno: 1
	Token Name: NAME 	Token: b 	 Lineno: 1
	Token Name: META CHAR 	Token: , 	 Lineno: 1
	Token Name: NAME 	Token: c 	 Lineno: 1
	Token Name: META CHAR 	Token: ; 	 Lineno: 1
	Token Name: VOID 	Token: void 	 Lineno: 2
	Token Name: NAME 	Token: main 	 Lineno: 2
	Token Name: META CHAR 	Token: ( 	 Lineno: 2
	Token Name: META CHAR 	Token: ) 	 Lineno: 2
	Token Name: META CHAR 	Token: { 	 Lineno: 2
	Token Name: INTEGER 	Token: int 	 Lineno: 3
	Token Name: NAME 	Token: __ 	 Lineno: 3
	Token Name: META CHAR 	Token: ; 	 Lineno: 3
	Token Name: FLOAT 	Token: float 	 Lineno: 4
	Token Name: NAME 	Token: asd234546_sdtf_90345 	 Lineno: 4
	Token Name: META CHAR 	Token: ; 	 Lineno: 4
	Token Name: NUM 	Token: 345 	 Lineno: 5
